Targetted fix for to ignore high contrast with <p> elements in sidedocs

--- a/theme/highcontrast.less
+++ b/theme/highcontrast.less
@@ -62,7 +62,7 @@
         }
     }
 
-    p {
+    p:not(#sidedocs p) {
         color: @HCtextColor !important;
         background-color: @HCbackground !important;
     }
